--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,8 @@
     <string name="cd_products_list">Products list</string>
     <string name="cd_comments_list">Comments list</string>
     <string name="cd_product_name">Name of the product</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="loading_todo_tasks">Loading todo tasks</string>
 </resources>
